// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withWebComponent conditional rendering 1`] = `
<DocumentFragment>
  <ui5-bar
    data-sap-ui-fastnavgroup="true"
    design="Header"
    ui5-bar=""
  >
    <span
      slot="startContent"
    >
      I'm here!
    </span>
  </ui5-bar>
</DocumentFragment>
`;

exports[`withWebComponent destruct fragments in slots 1`] = `
<DocumentFragment>
  <ui5-bar
    data-sap-ui-fastnavgroup="true"
    design="Header"
    ui5-bar=""
  >
    <span
      slot="startContent"
    >
      I'm here!
    </span>
    <span
      slot="startContent"
    >
      I'm here nested level 1!
    </span>
    <span
      slot="startContent"
    >
      I'm here nested level 2!
    </span>
    <span
      slot="startContent"
    >
      I'm the only child of a fragment in level 3!
    </span>
    <span
      slot="startContent"
    >
      I'm the only child of a fragment in level 1!
    </span>
    <span
      slot="startContent"
    >
      I'm the only child of a fragment in level 1!
    </span>
    <span
      slot="startContent"
    >
      I'm in an array inside of a fragment!
    </span>
    <span
      slot="startContent"
    >
      Me too!
    </span>
  </ui5-bar>
</DocumentFragment>
`;

exports[`withWebComponent scoping 1`] = `
<DocumentFragment>
  <ui5-button-ui5-wcr
    design="Default"
  >
    Scoping Test
  </ui5-button-ui5-wcr>
</DocumentFragment>
`;

exports[`withWebComponent scoping 2`] = `
<DocumentFragment>
  <ui5-button
    design="Default"
    ui5-button=""
  >
    Scoping Test
  </ui5-button>
</DocumentFragment>
`;
